# dotfiles

./: .dockerignore  .env.example  .env.example.atlassian  .env.example.github  .gitignore  .pre-commit-config.yaml  .stylua.toml  .tmux.conf  .tmux.host.conf  .tmux.local.conf  .tmux.remote.conf  .vimrc  .vimspector.json  .zshrc  LICENSE  Makefile  README-abstract.md  README.md  cheatsheet.txt  coc-settings.json  coc.package.json  init.lua  install.sh  lemonade.toml  pyproject.toml  remote.tmux.conf
.github/workflows/: build_and_push_docker_image.yml  build_and_push_docker_images_for_each_os.yml  build_ubuntu_environment.yml
.tmux/: .tmux.common.conf  .tmux.local.conf  .tmux.remote.conf
.vim/rc/: dein.toml  dein_lazy.toml
config/: aider.conf.yml  aider.conf.yml.example  aider.model.settings.yml.example  lite-llm-config.yaml  lite-llm-config.yaml.example  mcp.example.json  mcp.json.example  vim-ai-roles.ini  vim-ai-roles.ini.example
config/aider/: aider.mcp.profiles.example.yml
config/gemini-cli/: settings.example.json
config/litellm/: lite-llm-config.example.yaml
config/mcp/: mcp.example.json
config/vim-ai/: vim-ai-roles.ini.example
dap/: python.launch.json
docker/amzn2/: Dockerfile
docker/ubuntu/: Dockerfile
lua/core/: autocmds.lua  commands.lua  keymaps.lua  options.lua
lua/plugins/: ai.lua  csv.lua  debug.lua  edit.lua  format.lua  git.lua  (+12 more)
python/: requirements.txt
snippets/: aichat.snippets  json.snippets  markdown.snippets  python.snippets  sh.snippets  toml.snippets
tmux/: tmux.common.conf
vscode/: keybindings.json  settings.json
(+10 files in other folders)
