[project]
name = "dotfiles"
version = "0.1.0"
description = "Collection of configuration files and scripts for development environments"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "autopep8>=2.3.2",
  "black>=25.1.0",
  "debugpy>=1.8.14",
  "flake8>=7.2.0",
  "flake8-import-order>=0.18.2",
  "google-generativeai>=0.8.5",
  "isort>=6.0.1",
  "jedi>=0.19.2",
  "jupyter>=1.1.1",
  "jupytext>=1.17.2",
  "litellm[proxy]>=1.72.2",
  "markitdown-mcp>=0.0.1a3",
  "mypy>=1.16.0",
  "pylint>=3.3.7",
  "pynvim>=0.5.2",
  "pytest>=8.4.0",
  "qtconsole>=5.6.1",
  "tasklib>=2.5.1",
  "wheel>=0.45.1",
]
